ФЗ12 (#15)
* ФЗ12

* Вынес логику логов в сервисы, requireFilm, удалил in-memory storage, оптимизировал проверку жанров